# atomicmemory-integrations

./: .fallowrc.json  .gitignore  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: benchmark_case.yml  bug_report.yml  config.yml  docs_issue.yml  feature_request.yml  provider_request.yml
.github/workflows/: ci.yml
adapters/langchain-js/: README.md  package.json
adapters/langchain-js/src/: index.ts  ingest.test.ts  ingest.ts  search.test.ts  search.ts  test-fixtures.ts  tools.test.ts  tools.ts
adapters/langgraph-js/: README.md  package.json
adapters/langgraph-js/src/: index.ts  ingest.test.ts  (+6 more)
adapters/mastra/: README.md  package.json
adapters/openai-agents-sdk/: README.md  package.json
adapters/vercel-ai-sdk/: README.md  package.json
plugins/claude-code/: README.md  package.json
plugins/codex/: .codex-mcp.json  README.md  marketplace.example.json  package.json
plugins/cursor/: README.md  package.json
plugins/hermes/: CHANGELOG.md  README.md  __init__.py  breaker.py  client.py  config.py  install.mjs  package.json  plugin.yaml  pyproject.toml  python_sdk.py  tools.py  worker.py
plugins/hermes/tests/: fakes.py  test_breaker.py  test_config.py  test_fakes.py  test_install_path_imports.py  test_provider.py  test_python_sdk.py  test_worker.py
plugins/openclaw/: README.md  openclaw.plugin.json  package.json
scripts/: bump-plugin-versions.mjs
(+60 files in other folders)
